--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,9 +31,19 @@ html, body
 	box-shadow: inset 0 0 5px 0px #00000060;
 }
 
-#key-highlight-color
+.key-highlight-color
 {
 	background-color: mediumslateblue;
+}
+
+.key-correct-color
+{
+	background-color: green;
+}
+
+.key-incorrect-color
+{
+	background-color: red;
 }
 
 .main-div
