--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,7 +50,7 @@ html, body
 {
 	display: flex;
 	flex-direction: column;
-	width: min-content;
+	align-items: flex-start;
 	gap: 10px;
 	padding: 10px;
 }
@@ -59,14 +59,12 @@ html, body
 {
 	display: flex;
 	flex-direction: column;
-	width: min-content;
 }
 
 .piano-top
 {
 	display: flex;
 	flex-direction: row;
-	width: min-content;
 }
 
 .piano-top > *
@@ -78,7 +76,6 @@ html, body
 {
 	display: flex;
 	flex-direction: row;
-	width: min-content;
 }
 
 .piano-bottom > *
@@ -104,87 +101,3 @@ html, body
 	width: var(--key-width-bottom);
 	height: var(--key-height-bottom);
 }
-
-/* 
-.key-bottom, .key-top-white-large, .key-top-white-small
-{
-	background-color: #E5E5E5;
-	box-shadow: inset 0 0 5px 0px #A0A0A0;
-}
-
-.key-top-black
-{
-	background-color: #303030;
-	box-shadow: inset 0 0 5px 0px black;
-}
-
-.piano-top, .piano-bottom
-{
-	display: flex;
-	flex-direction: row;
-	width: min-content;
-}
-
-.piano-top
-{
-	padding-left: var(--key-width-left-padding);
-}
-
-.key-top-white-small, .key-top-black
-{
-	width: var(--key-width-top-small);
-	height: var(--key-half-height-top);
-}
-
-.key-top-white-large
-{
-	width: var(--key-width-top-large);
-	height: var(--key-half-height-top);
-}
-
-.key-bottom
-{
-	width: var(--key-width-bottom);
-	height: var(--key-half-height-bottom);
-}
-
-.test1
-{
-	display: flex;
-	flex-direction: column;
-	width: min-content;
-}
-
-.test2
-{
-	display: flex;
-	flex-direction: row;
-	width: min-content;
-}
-
-.test3
-{
-	background-color: green;
-	width: 40px;
-	height: 100px;
-
-	margin-top: -30px;
-	z-index: 0;
-}
-
-.test4
-{
-	background-color: red;
-	width: 30px;
-	height: 80px;
-
-	z-index: 1;
-}
-
-.test5
-{
-	background-color: magenta;
-	width: 20px;
-
-	z-index: 1;
-} */
