started making settings for chord types

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,12 @@ html, body
 	padding: 10px;
 }
 
+.generate-button-and-settings
+{
+	display: flex;
+	flex-direction: row;
+}
+
 .piano
 {
 	display: flex;
